manifests/ingress-1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "ashutoshkube"
    labels:
        app: "ashutoshkube"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: ashutoshkube3973-ashutoshkube.35219cbeaef74b9c89c0.southeastasia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "ashutoshkube"
                servicePort: 8080
